# hate_speech_classification_project

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py  template.py
api/: main.py
api/core/: config.py
api/routers/: home.py  predict.py
api/schemas/: models.py
api/services/: hf_client.py
hate_speech/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
hate_speech/constant/: __init__.py
hate_speech/entity/: artifact_entity.py  config_entity.py
hate_speech/exception/: __init__.py
hate_speech/ml/: models.py
hate_speech/pipeline/: prediction_pipeline.py  train_pipelin.py  train_pipeline.py
lab/: model_dev.ipynb  model_developmen_colab.ipynb  model_developmen_colab_lab.ipynb  model_development_lab_local_machine.ipynb  requirements.txt
lab/wandb/run-20251111_124854-6rjk37b8/files/: config.yaml  requirements.txt  wandb-metadata.json
notebooks/: hate_speech_classification.ipynb
